# ifi-blog-rs

./: .gitignore  Cargo.toml  Dockerfile  README.md  admin_list.txt  build.rs
.github/workflows/: rust.yml
migrations/: V1__initial.sql
src/: chat_ids.rs  db.rs  lib.rs  main.rs  util.rs
