[package]
name = "ifi-blog-rs"
version = "0.1.0"
authors = ["robinwilliam.hundt <robinwilliam.hundt@stud.uni-goettingen.de>"]
edition = "2018"

[dependencies]
rocksdb = "0.14.0"
rss = { version = "1.8.0", features = ["from_url"] }
futures = "0.3.5"
futures-util = "0.3.5"
tokio = {version = "0.2.21", features = ["time", "macros"]}
log = "0.4.8"
anyhow = "1.0.31"
teloxide = "0.2.0"
pretty_env_logger = "0.4.0"
serde = "1.0.114"
bincode = "1.2.1"
